<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="40sp"
        android:textSize="44sp"
        android:text="@string/welcome_msg" />

    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="40sp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/welcome_new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_new_button"/>

    <Button
        android:id="@+id/welcome_saved_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_saved_button"/>

</LinearLayout>