<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DownloadImage"
    tools:openDrawer="start"
    android:id="@+id/download_image_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/download_progress_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="30sp"
            android:gravity="center"
            android:text="@string/download_progress_label"/>

        <ProgressBar
            android:id="@+id/download_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10sp"
            style="?android:attr/progressBarStyleHorizontal" />

        <ImageView
            android:id="@+id/download_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:maxHeight="500sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_image_desc"/>

        <TextView
            android:id="@+id/download_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="40sp"
            android:labelFor="@id/download_image_name_field"
            android:textSize="18sp"
            android:text="@string/download_name_image"/>

        <EditText
            android:id="@+id/download_image_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="imageName"
            android:inputType="text"
            android:text="@string/download_image_name_field" />

        <Button
            android:id="@+id/download_save_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/download_save_name_button"
            android:enabled="false"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>